--- a/views/home.html
+++ b/views/home.html
@@ -3,7 +3,7 @@
         </div>
         <div class="module">
             <div class="content">
-                <header><h2>Featured TV Shows</h2>
+                <header><h2>Featured Anime</h2>
                     <div class="nav_items_module">
                         <a class="btn prevf">
                             <i class="icon-caret-left"></i>
@@ -66,8 +66,6 @@
             <div class="sidebar scrolling">
                 <div class="fixed-sidebar-blank">
                     <aside id="media_image-7" class="widget widget_media_image">
-                        <a href="/movies">
-                            <img width="300" height="169" src="{{randomImg}}" class="image wp-image-93020 attachment-medium size-medium" alt="" style="max-width: 100%; height: auto;" sizes="(max-width: 300px) 100vw, 300px" /></a>
                     </aside>
                   </div>
                 <div class="dt_mainmeta">
