--- a/views/movies.html
+++ b/views/movies.html
@@ -55,7 +55,7 @@
 
 
                 <div class="pagination">
-                    <span>Page {{.PageIndex}} of {{.PageCount}}</span>
+                    <span>seite {{.PageIndex}} von {{.PageCount}}</span>
                     <span class="current">{{.PageIndex}}</span>
                     <a href='/movies/page/{{add .PageIndex 1}}/' class="inactive">{{add .PageIndex 1}}</a>
                     <a href='/movies/page/{{add .PageIndex 2}}/' class="inactive">{{add .PageIndex 2}}</a>
